--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,13 @@
 === Run by Gradle
 `./gradlew run`
 
+=== Build the projdct
+`./gradlew clean build`
+
 === Run by FatJar
-1. build the project first by `./gradlew clean build`
+1. make sure the project is already built
 2. run `java -jar build/libs/ktor-poc-0.0.1-all.jar`
+
+=== Build Docker image
+1. make sure the project is already built
+2. `docker build .`
